# silver-star

./: .gitignore  LICENSE  README.md  setup_and_run.sh  status.sh  stop.sh
code/: .gitignore  env_example
code/backend/: README.md  populate_jobs.py  pyproject.toml  requirements.txt  start_server.py
code/backend/app/: config.py  crud.py  deps.py  main.py  models.py  schemas.py  security.py
code/backend/app/llm/: README.md  README_AUDIO.md  __init__.py  llm_config_example
code/backend/app/llm/audio/: __init__.py  audio_player.py  voice.py
code/backend/app/llm/chatbot/: chatbot.py  profile_validator.py  recommendations.py  validation.py
code/backend/app/llm/core/: __init__.py  config.py  llm_logger.py  service.py  utils.py
code/backend/app/llm/examples/: example_audio.py  test_audio_chatbot.py
code/backend/app/llm/tests/: __init__.py
code/backend/app/routers/: auth.py  chatbot.py  job_scraper.py  jobs.py
code/backend/llm/: __init__.py
code/backend/scrapers/craigslist/: README.md  index.html  requirements.txt  server.py  silverstar_cl.py
code/backend/scrapers/craigslist/static/: app.js  style.css
code/backend/scrapers/craigslist/tools/: craigslist_scraper.py  custom_tool.py  intent_collector.py  job_fetchers.py
code/backend/scrapers/twitter/: README.md  credentials.json  twitter_utils.py
code/backend/scrapers/usajobs/: README.md  __init__.py  ai_interface.py  client.py
code/backend/server/: .env.example  README.md  requirements.txt  start_server.py
code/backend/server/app/: crud.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
(+49 files in other folders)
